--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿asgiref==3.8.1
+asgiref==3.8.1
 attrs==23.2.0
 Automat==22.10.0
 certifi==2024.7.4
@@ -36,4 +36,7 @@ pytest-django==4.8.0
 queuelib==1.7.0
 requests==2.32.3
 requests-file==2.1.0
-Scrapy==2.11.2
+celery
+django-celery-beat
+pika
+scrapy
